# litsea

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  REFACTORING_PLAN.md  index.html  rustfmt.toml
.github/workflows/: deploy-docs.yml  periodic.yml  regression.yml  release.yml
docs/: book.toml
docs/ja/: book.toml
docs/ja/src/: README.md  SUMMARY.md  cli-reference.md  getting-started.md  introduction.md  license.md  litsea-cli.md  litsea.md  pre-trained-models.md  training-guide.md
docs/ja/src/advanced/: benchmarking.md  model-file-format.md  remote-model-loading.md
docs/ja/src/algorithm/: adaboost.md  averaged-perceptron.md  character-type-classification.md  feature-extraction.md  prediction-pipeline.md
docs/ja/src/architecture/: module-design.md  overview.md  workspace-structure.md
docs/ja/src/cli-reference/: convert-conllu.md  extract.md  overview.md  segment.md  train.md
docs/ja/src/getting-started/: installation.md  quick-start.md
docs/ja/src/library-api/: trainer.md  (+3 more)
docs/src/: README.md  SUMMARY.md  cli-reference.md  getting-started.md  introduction.md  license.md  litsea-cli.md  litsea.md  pre-trained-models.md  training-guide.md
docs/src/advanced/: benchmarking.md  model-file-format.md  remote-model-loading.md
docs/src/algorithm/: adaboost.md  averaged-perceptron.md  character-type-classification.md  feature-extraction.md  prediction-pipeline.md
docs/src/architecture/: module-design.md  overview.md  workspace-structure.md
docs/src/cli-reference/: convert-conllu.md  extract.md  overview.md  segment.md  train.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/language-support/: adding-a-new-language.md  chinese.md  japanese.md  korean.md  overview.md
docs/src/library-api/: conllu.md  extractor.md  language.md  overview.md  segmenter.md
docs/src/litsea/: adaboost.md  averaged-perceptron.md  conllu.md  extractor.md  language.md  segmenter.md  trainer.md  upos.md
docs/src/litsea-cli/: convert-conllu.md  extract.md  segment.md  split-sentences.md  train.md
docs/src/training-guide/: evaluating-models.md  extracting-features.md  preparing-corpus.md  retraining-models.md  training-models.md
en/: 404.html  getting-started.html  index.html  introduction.html  license.html  litsea-cli.html  litsea.html  pre-trained-models.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-05f73a17.js  searchindex-1975e3b0.js  searchindex-1d16b926.js  searchindex-4ac343d7.js  searchindex-775375b4.js  searchindex-9ce83e0f.js  searchindex-ad6c0be6.js  searchindex-cc69bee1.js  toc-2e92acbd.js  toc-3e5df682.js  toc-ae7d976f.js  toc-b64cce5c.js  toc-dc1e276c.js  toc.html  training-guide.html
en/advanced/: benchmarking.html  model-file-format.html  remote-model-loading.html
en/algorithm/: adaboost.html  averaged-perceptron.html  character-type-classification.html  feature-extraction.html  prediction-pipeline.html
en/architecture/: module-design.html  overview.html  workspace-structure.html
en/cli-reference/: convert-conllu.html  extract.html  overview.html  segment.html  split-sentences.html  train.html
en/getting-started/: installation.html  quick-start.html
en/language-support/: adding-a-new-language.html  chinese.html  japanese.html  korean.html  overview.html
en/library-api/: adaboost.html  averaged-perceptron.html  conllu.html  extractor.html  language.html  overview.html  segmenter.html  trainer.html  upos.html
en/litsea/: adaboost.html  averaged-perceptron.html  conllu.html  extractor.html  language.html  segmenter.html  trainer.html  upos.html
en/litsea-cli/: convert-conllu.html  extract.html  segment.html  split-sentences.html  train.html
en/training-guide/: evaluating-models.html  extracting-features.html  preparing-corpus.html  retraining-models.html  training-models.html
ja/: 404.html  getting-started.html  index.html  introduction.html  license.html  litsea-cli.html  litsea.html  pre-trained-models.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-04015350.js  searchindex-06cb1f2c.js  searchindex-715437d4.js  searchindex-948b2537.js  searchindex-95c94099.js  searchindex-a1bf51be.js  searchindex-af5b1803.js  searchindex-df49344a.js  toc-007a5c4f.js  toc-b7688c67.js  toc-dbe37805.js  toc-fe6f6d22.js  toc-feadcd78.js  toc.html  training-guide.html
ja/advanced/: benchmarking.html  model-file-format.html  remote-model-loading.html
ja/algorithm/: adaboost.html  averaged-perceptron.html  character-type-classification.html  feature-extraction.html  prediction-pipeline.html
ja/architecture/: module-design.html  overview.html  workspace-structure.html
ja/cli-reference/: convert-conllu.html  extract.html  overview.html  segment.html  split-sentences.html  train.html
ja/getting-started/: installation.html  quick-start.html
ja/language-support/: adding-a-new-language.html  chinese.html  japanese.html  korean.html  overview.html
ja/library-api/: adaboost.html  averaged-perceptron.html  conllu.html  extractor.html  language.html  overview.html  segmenter.html  trainer.html  upos.html
ja/litsea/: adaboost.html  averaged-perceptron.html  conllu.html  extractor.html  language.html  segmenter.html  trainer.html  upos.html
ja/litsea-cli/: convert-conllu.html  extract.html  segment.html  split-sentences.html  train.html
ja/training-guide/: evaluating-models.html  extracting-features.html  preparing-corpus.html  retraining-models.html  training-models.html
litsea/: Cargo.toml  README.md
litsea-cli/: Cargo.toml  README.md
litsea-cli/src/: main.rs
litsea/benches/: bench.rs
litsea/src/: adaboost.rs  conllu.rs  error.rs  extractor.rs  language.rs  lib.rs  metrics.rs  model_io.rs  perceptron.rs  segmenter.rs  trainer.rs  upos.rs  util.rs
litsea/tests/: golden.rs
models/: chinese.model  japanese.model  korean.model
resources/: chinese.model  japanese.model  korean.model
scripts/: corpus.sh  corpus_udtreebank.sh  corpus_wikidump.sh  download_udtreebank.sh  download_wikidump.sh  split_sentences.sh  wikitexts.sh
src/: segmenter.rs
(+23 files in other folders)
