[workspace]
resolver = "3"
members = ["litsea", "litsea-cli"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.87"
description = "Litsea is an extremely compact word segmentation and model training tool implemented in Rust."
documentation = "https://docs.rs/litsea"
homepage = "https://github.com/mosuka/litsea"
repository = "https://github.com/mosuka/litsea"
readme = "README.md"
keywords = ["word", "segmentation", "training", "model", "nlp"]
categories = ["text-processing"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.59", features = ["derive"] }
ctrlc = "3.5.2"
icu_segmenter = "2.1.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
    "rustls",
], default-features = false } # use rustls instead of native-tls to avoid linking openssl; disables http2, charset, and system-proxy
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4.5"
criterion = { version = "0.8.2", default-features = false, features = [
    "html_reports",
] }

litsea = { version = "0.4.0", path = "./litsea" }
