[package]
name = "litsea-cli"
version = "0.2.0"
edition = "2024"
description = "Command line interface for Litsea."
documentation = "https://docs.rs/litsea-cli"
homepage = "https://github.com/mosuka/litsea/litsea-cli"
repository = "https://github.com/mosuka/litsea"
readme = "README.md"
keywords = ["word", "segmentation", "training", "model"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
clap.workspace = true
ctrlc.workspace = true
litsea.workspace = true
