[package]
name = "litsea-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation = "https://docs.rs/litsea-cli"
homepage = "https://github.com/mosuka/litsea/litsea-cli"
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
ctrlc.workspace = true
icu_segmenter.workspace = true
tokio.workspace = true

litsea.workspace = true

[[bin]]
name = "litsea"
path = "src/main.rs"
