[package]
name = "litsea-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation = "https://docs.rs/litsea"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
ctrlc.workspace = true
icu_segmenter.workspace = true
tokio.workspace = true

litsea.workspace = true

[[bin]]
name = "litsea"
path = "src/main.rs"
