[package]
name = "litsea"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
reqwest.workspace = true

[dev-dependencies]
criterion.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
tokio-test.workspace = true

[[bench]]
name = "bench"
harness = false
